--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.3.3",
     "@react-three/drei": "^9.108.1",
     "@react-three/fiber": "^8.16.8",
+    "@vercel/analytics": "^1.3.1",
     "framer-motion": "^11.2.12",
     "maath": "^0.10.7",
     "math": "^0.0.3",
